<resources>
    <string name="app_name">ConvertidorClase</string>
    <string name="peso">Peso</string>
    <string name="distancia">Distancia</string>
    <string name="volumen">Volumen</string>
    <string name="cocina">Cocina</string>
    <string name="temperatura">Temperatura</string>
    <string name="presion">Presion</string>
<<<<<<< Updated upstream
=======
    <string name="convertir">Convertir</string>
    <string name="flour">Harina</string>
>>>>>>> Stashed changes
</resources>
